Bug 73138, don't try to open viewsheet to generate Open Graph tags if the request does not come from a social app bot.